--- a/HbbAnalyzer/test/AnalysisSept2011/multicrab_mc.cfg
+++ b/HbbAnalyzer/test/AnalysisSept2011/multicrab_mc.cfg
@@ -232,6 +232,55 @@ CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
 CMSSW.datasetpath=/Tbar_TuneZ2_tW-channel-DR_7TeV-powheg-tauola/Summer11-PU_S4_START42_V11-v1/AODSIM
 USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 
+#QCD
+
+[QCD_Pt-20_MuEnrichedPt-15_TuneZ2_7TeV-pythia6]
+CMSSW.total_number_of_events=-1
+CMSSW.events_per_job=100000
+#CMSSW.number_of_jobs=300
+CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+CMSSW.datasetpath=/QCD_Pt-20_MuEnrichedPt-15_TuneZ2_7TeV-pythia6/Summer11-PU_S4_START42 V11-v2/AODSIM
+USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+
+[QCD_Pt-80to120_TuneZ2_7TeV-pythia6]
+CMSSW.total_number_of_events=-1
+CMSSW.events_per_job=100000
+#CMSSW.number_of_jobs=300
+CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+CMSSW.datasetpath=/QCD_Pt-80to120_TuneZ2_7TeV_pythia6/Summer11-PU_S4_START42_V11-v1/AODSIM
+USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+
+[QCD_Pt-120to170_TuneZ2_7TeV-pythia6]
+CMSSW.total_number_of_events=-1
+CMSSW.events_per_job=100000
+#CMSSW.number_of_jobs=300
+CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+CMSSW.datasetpath=/QCD_Pt-120to170_TuneZ2_7TeV_pythia6/Summer11-PU_S4_START42_V11-v1/AODSIM
+USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+
+[QCD_Pt-170to300_TuneZ2_7TeV-pythia6]
+CMSSW.total_number_of_events=-1
+CMSSW.events_per_job=100000
+#CMSSW.number_of_jobs=300
+CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+CMSSW.datasetpath=/QCD_Pt-170to300_TuneZ2_7TeV_pythia6/Summer11-PU_S4_START42_V11-v1/AODSIM
+USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+
+[QCD_Pt-300to470_TuneZ2_7TeV-pythia6]
+CMSSW.total_number_of_events=-1
+CMSSW.events_per_job=100000
+#CMSSW.number_of_jobs=300
+CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+CMSSW.datasetpath=/QCD_Pt-300to470_TuneZ2_7TeV_pythia6/Summer11-PU_S4_START42_V11-v1/AODSIM
+USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+
+[QCD_Pt-470to600_TuneZ2_7TeV-pythia6]
+CMSSW.total_number_of_events=-1
+CMSSW.events_per_job=100000
+#CMSSW.number_of_jobs=300
+CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+CMSSW.datasetpath=/QCD_Pt-470to600_TuneZ2_7TeV_pythia6/Summer11-PU_S4_START42_V11-v1/AODSIM
+USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 #
 # new ones
 #
