--- a/HbbAnalyzer/test/AnalysisSept2011/multicrab_mc.cfg
+++ b/HbbAnalyzer/test/AnalysisSept2011/multicrab_mc.cfg
@@ -13,65 +13,65 @@ cfg=crab_mc.cfg
 CMSSW.total_number_of_events=-1
 CMSSW.events_per_job=100000
 #CMSSW.number_of_jobs=300
-CMSSW.pset=patTuple_PF2PAT_Event_Candidates_MC.py
+#CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_MC_new.py
 CMSSW.datasetpath=/ZH_ZToLL_HToBB_M-100_7TeV-powheg-herwigpp/Summer11-PU_S4_START42_V11-v1/AODSIM
-USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+#USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 
 [ZH_ZToLL_HToBB_M105_powheg_herwigpp]
 CMSSW.total_number_of_events=-1
 CMSSW.events_per_job=100000
 #CMSSW.number_of_jobs=300
-CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+#CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_MC_new.py
 CMSSW.datasetpath=/ZH_ZToLL_HToBB_M-105_7TeV-powheg-herwigpp/Summer11-PU_S4_START42_V11-v1/AODSIM
-USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+#USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 
 [ZH_ZToLL_HToBB_M110_powheg_herwigpp]
 CMSSW.total_number_of_events=-1
 CMSSW.events_per_job=100000
 #CMSSW.number_of_jobs=300
-CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+#CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_MC_new.py
 CMSSW.datasetpath=/ZH_ZToLL_HToBB_M-110_7TeV-powheg-herwigpp/Summer11-PU_S4_START42_V11-v1/AODSIM
-USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+#USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 
 [ZH_ZToLL_HToBB_M115_powheg_herwigpp]
 CMSSW.total_number_of_events=-1
 CMSSW.events_per_job=100000
 #CMSSW.number_of_jobs=300
-CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+#CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_MC_new.py
 CMSSW.datasetpath=/ZH_ZToLL_HToBB_M-115_7TeV-powheg-herwigpp/Summer11-PU_S4_START42_V11-v1/AODSIM
-USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+#USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 
 [ZH_ZToLL_HToBB_M120_powheg_herwigpp]
 CMSSW.total_number_of_events=-1
 CMSSW.events_per_job=100000
 #CMSSW.number_of_jobs=300
-CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+#CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_MC_new.py
 CMSSW.datasetpath=/ZH_ZToLL_HToBB_M-120_7TeV-powheg-herwigpp/Summer11-PU_S4_START42_V11-v1/AODSIM
-USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+#USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 
 [ZH_ZToLL_HToBB_M125_powheg_herwigpp]
 CMSSW.total_number_of_events=-1
 CMSSW.events_per_job=100000
 #CMSSW.number_of_jobs=300
-CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+#CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_MC_new.py
 CMSSW.datasetpath=/ZH_ZToLL_HToBB_M-125_7TeV-powheg-herwigpp/Summer11-PU_S4_START42_V11-v1/AODSIM
-USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+#USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 
 [ZH_ZToLL_HToBB_M130_powheg_herwigpp]
 CMSSW.total_number_of_events=-1
 CMSSW.events_per_job=100000
 #CMSSW.number_of_jobs=300
-CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+#CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_MC_new.py
 CMSSW.datasetpath=/ZH_ZToLL_HToBB_M-130_7TeV-powheg-herwigpp/Summer11-PU_S4_START42_V11-v1/AODSIM
-USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+#USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 
 [ZH_ZToLL_HToBB_M135_powheg_herwigpp]
 CMSSW.total_number_of_events=-1
 CMSSW.events_per_job=100000
 #CMSSW.number_of_jobs=300
-CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+#CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_MC_new.py
 CMSSW.datasetpath=/ZH_ZToLL_HToBB_M-135_7TeV-powheg-herwigpp/Summer11-PU_S4_START42_V11-v1/AODSIM
-USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+#USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 
 
 #BACKGROUND
@@ -82,25 +82,25 @@ USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 CMSSW.total_number_of_events=-1
 CMSSW.events_per_job=100000
 #CMSSW.number_of_jobs=300
-CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+#CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_MC_new.py
 CMSSW.datasetpath=/DYJetsToLL_TuneZ2_M-50_7TeV-madgraph-tauola/Summer11-PU_S4_START42_V11-v1/AODSIM
-USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+#USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 
 [ZJetsToLL_Pt-100_7TeV-herwigpp]
 CMSSW.total_number_of_events=-1
 CMSSW.events_per_job=100000
 #CMSSW.number_of_jobs=300
-CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+#CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_MC_new.py
 CMSSW.datasetpath=/ZJetsToLL_Pt-100_7TeV-herwigpp/Summer11-PU_S4_START42_V11-v1/AODSIM
-USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+#USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 
 [ZJetsToLL_Pt-100_TuneZ2-madgraph-tauola]
 CMSSW.total_number_of_events=-1
 CMSSW.events_per_job=100000
 #CMSSW.number_of_jobs=300
-CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+#CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_MC_new.py
 CMSSW.datasetpath=/DYJetsToLL_PtZ-100_TuneZ2_7TeV-madgraph-tauola/Summer11-PU_S4_START42_V11-v1/AODSIM
-USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+#USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 
 #ZToNuNu+jets
 
@@ -108,17 +108,17 @@ USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 CMSSW.total_number_of_events=-1
 CMSSW.events_per_job=100000
 #CMSSW.number_of_jobs=300
-CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+#CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_MC_new.py
 CMSSW.datasetpath=/ZJetsToNuNu_Pt-100_7TeV-herwigpp/Summer11-PU_S4_START42_V11-v1/AODSIM
-USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+#USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 
 [ZJetsToNuNu_Pt-100_TuneZ2-madgraph]
 CMSSW.total_number_of_events=-1
 CMSSW.events_per_job=100000
 #CMSSW.number_of_jobs=300
-CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+#CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_MC_new.py
 CMSSW.datasetpath=/DYJetsToNuNu_PtZ-100_TuneZ2_7TeV-madgraph/Summer11-PU_S4_START42_V11-v1/AODSIM
-USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+#USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 
 #TTbar
 
@@ -126,9 +126,9 @@ USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 CMSSW.total_number_of_events=-1
 CMSSW.events_per_job=100000
 #CMSSW.number_of_jobs=300
-CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+#CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_MC_new.py
 CMSSW.datasetpath=/TTJets_TuneZ2_7TeV-madgraph-tauola/Summer11-PU_S4_START42_V11-v1/AODSIM
-USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+#USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 
 #W+Jets
 
@@ -136,25 +136,25 @@ USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 CMSSW.total_number_of_events=-1
 CMSSW.events_per_job=100000
 #CMSSW.number_of_jobs=300
-CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+#CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_MC_new.py
 CMSSW.datasetpath=/WJetsToLNu_TuneZ2_7TeV-madgraph-tauola/Summer11-PU_S4_START42_V11-v1/AODSIM
-USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+#USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 
 [WJetsToLNu_PtW-100_TuneZ2_madgraph_tauola]
 CMSSW.total_number_of_events=-1
 CMSSW.events_per_job=100000
 #CMSSW.number_of_jobs=300
-CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+#CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_MC_new.py
 CMSSW.datasetpath=/WJetsToLNu_PtW-100_TuneZ2_7TeV-madgraph/Summer11-PU_S4_START42_V11-v1/AODSIM
-USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+#USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 
 [WJetsToLNu_PtW-100_7TeV-herwigpp]
 CMSSW.total_number_of_events=-1
 CMSSW.events_per_job=100000
 #CMSSW.number_of_jobs=300
-CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+#CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_MC_new.py
 CMSSW.datasetpath=/WJetsToLNu_Pt-100_7TeV-herwigpp/Summer11-PU_S4_START42_V11-v1/AODSIM
-USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+#USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 
 #DiBoson
 
@@ -162,25 +162,25 @@ USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 CMSSW.total_number_of_events=-1
 CMSSW.events_per_job=100000
 #CMSSW.number_of_jobs=300
-CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+#CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_MC_new.py
 CMSSW.datasetpath=/WZ_TuneZ2_7TeV_pythia6_tauola/Summer11-PU_S4_START42_V11-v1/AODSIM
-USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+#USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 
 [WW_TuneZ2_madgraph_tauola]
 CMSSW.total_number_of_events=-1
 CMSSW.events_per_job=100000
 #CMSSW.number_of_jobs=300
-CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+#CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_MC_new.py
 CMSSW.datasetpath=/WW_TuneZ2_7TeV_pythia6_tauola/Summer11-PU_S4_START42_V11-v1/AODSIM
-USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+#USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 
 [ZZ_TuneZ2_madgraph_tauola]
 CMSSW.total_number_of_events=-1
 CMSSW.events_per_job=100000
 #CMSSW.number_of_jobs=300
-CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+#CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_MC_new.py
 CMSSW.datasetpath=/ZZ_TuneZ2_7TeV_pythia6_tauola/Summer11-PU_S4_START42_V11-v1/AODSIM
-USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+#USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 
 # Single top
 
@@ -188,49 +188,49 @@ USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 CMSSW.total_number_of_events=-1
 CMSSW.events_per_job=100000
 #CMSSW.number_of_jobs=300
-CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+#CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_MC_new.py
 CMSSW.datasetpath=/T_TuneZ2_t-channel_7TeV-powheg-tauola/Summer11-PU_S4_START42_V11-v1/AODSIM
-USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+#USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 
 [T_TuneZ2_tW-channel-DR_7TeV]
 CMSSW.total_number_of_events=-1
 CMSSW.events_per_job=100000
 #CMSSW.number_of_jobs=300
-CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+#CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_MC_new.py
 CMSSW.datasetpath=/T_TuneZ2_tW-channel-DR_7TeV-powheg-tauola/Summer11-PU_S4_START42_V11-v1/AODSIM
-USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+#USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 
 [Tbar_TuneZ2_s-channel_7TeV]
 CMSSW.total_number_of_events=-1
 CMSSW.events_per_job=100000
 #CMSSW.number_of_jobs=300
-CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+#CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_MC_new.py
 CMSSW.datasetpath=/Tbar_TuneZ2_s-channel_7TeV-powheg-tauola/Summer11-PU_S4_START42_V11-v1/AODSIM
-USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+#USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 
 [Tbar_TuneZ2_t-channel_7TeV]
 CMSSW.total_number_of_events=-1
 CMSSW.events_per_job=100000
 #CMSSW.number_of_jobs=300
-CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+#CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_MC_new.py
 CMSSW.datasetpath=/Tbar_TuneZ2_t-channel_7TeV-powheg-tauola/Summer11-PU_S4_START42_V11-v1/AODSIM
-USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+#USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 
 [Tbar_TuneZ2_tW-channel-DS_7TeV]
 CMSSW.total_number_of_events=-1
 CMSSW.events_per_job=100000
 #CMSSW.number_of_jobs=300
-CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+#CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_MC_new.py
 CMSSW.datasetpath=/Tbar_TuneZ2_tW-channel-DS_7TeV-powheg-tauola/Summer11-PU_S4_START42_V11-v1/AODSIM
-USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+#USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 
 [Tbar_TuneZ2_tW-channel-DR_7TeV]
 CMSSW.total_number_of_events=-1
 CMSSW.events_per_job=100000
 #CMSSW.number_of_jobs=300
-CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+#CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_MC_new.py
 CMSSW.datasetpath=/Tbar_TuneZ2_tW-channel-DR_7TeV-powheg-tauola/Summer11-PU_S4_START42_V11-v1/AODSIM
-USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+#USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 
 #QCD
 
@@ -238,49 +238,49 @@ USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 CMSSW.total_number_of_events=-1
 CMSSW.events_per_job=100000
 #CMSSW.number_of_jobs=300
-CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+#CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_MC_new.py
 CMSSW.datasetpath=/QCD_Pt-20_MuEnrichedPt-15_TuneZ2_7TeV-pythia6/Summer11-PU_S4_START42 V11-v2/AODSIM
-USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+#USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 
 [QCD_Pt-80to120_TuneZ2_7TeV-pythia6]
 CMSSW.total_number_of_events=-1
 CMSSW.events_per_job=100000
 #CMSSW.number_of_jobs=300
-CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+#CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_MC_new.py
 CMSSW.datasetpath=/QCD_Pt-80to120_TuneZ2_7TeV_pythia6/Summer11-PU_S4_START42_V11-v1/AODSIM
-USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+#USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 
 [QCD_Pt-120to170_TuneZ2_7TeV-pythia6]
 CMSSW.total_number_of_events=-1
 CMSSW.events_per_job=100000
 #CMSSW.number_of_jobs=300
-CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+#CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_MC_new.py
 CMSSW.datasetpath=/QCD_Pt-120to170_TuneZ2_7TeV_pythia6/Summer11-PU_S4_START42_V11-v1/AODSIM
-USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+#USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 
 [QCD_Pt-170to300_TuneZ2_7TeV-pythia6]
 CMSSW.total_number_of_events=-1
 CMSSW.events_per_job=100000
 #CMSSW.number_of_jobs=300
-CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+#CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_MC_new.py
 CMSSW.datasetpath=/QCD_Pt-170to300_TuneZ2_7TeV_pythia6/Summer11-PU_S4_START42_V11-v1/AODSIM
-USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+#USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 
 [QCD_Pt-300to470_TuneZ2_7TeV-pythia6]
 CMSSW.total_number_of_events=-1
 CMSSW.events_per_job=100000
 #CMSSW.number_of_jobs=300
-CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+#CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_MC_new.py
 CMSSW.datasetpath=/QCD_Pt-300to470_TuneZ2_7TeV_pythia6/Summer11-PU_S4_START42_V11-v1/AODSIM
-USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+#USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 
 [QCD_Pt-470to600_TuneZ2_7TeV-pythia6]
 CMSSW.total_number_of_events=-1
 CMSSW.events_per_job=100000
 #CMSSW.number_of_jobs=300
-CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_mc_new.py
+#CMSSW.pset=../patTuple_PF2PAT_Event_Candidates_MC_new.py
 CMSSW.datasetpath=/QCD_Pt-470to600_TuneZ2_7TeV_pythia6/Summer11-PU_S4_START42_V11-v1/AODSIM
-USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
+#USER.publish_data_name=HBB_EDMNtupleV3_ProcV1
 #
 # new ones
 #
