--- a/HbbAnalyzer/test/AnalysisSept2011/crab_dt.cfg
+++ b/HbbAnalyzer/test/AnalysisSept2011/crab_dt.cfg
@@ -1,6 +1,7 @@
 [CMSSW]
 output_file=PAT.edm.root
 get_edm_output=1
+pset=../patTuple_PF2PAT_Event_Candidates_data_new.py
 
 [USER]
 return_data=0
@@ -12,8 +13,8 @@ publish_data = 1
 dbs_url_for_publication = https://cmsdbsprod.cern.ch:8443/cms_dbs_ph_analysis_02_writer/servlet/DBSServlet
 
 [GRID]
-SE_black_list=T0,T1,T2_US_MIT,T2_UK_SGrid_RALPP,T2_EE_Estonia,T2_US_Florida,T2_FR_GRIF_LLR,T2_BR_UERJ,T2_UA_KIPT,T2_ES_IFCA,T2_PK_NCP,T2_RU_INR,T2_UK_SGrid_Bristol,T2_PL_Warsaw
-CE_black_list=knu.ac.kr,T0,T1,T2_US_MIT,T2_UK_SGrid_RALPP,T2_EE_Estonia,T2_US_Florida,T2_FR_GRIF_LLR,T2_BR_UERJ,T2_UA_KIPT,T2_ES_IFCA,T2_PK_NCP,T2_RU_INR,T2_UK_SGrid_Bristol,T2_PL_Warsaw
+SE_black_list=T0,T1,T2_CH_CSCS,T2_FI_HIP,T2_UK_SGrid_RALPP,T2_BE_UCL,T2_HU_Budapest,T2_PL_Warsaw,T2_FR_GRIF_IRFU,T2_BR_SPRACE,T2_PT_LIP_Lisbon,T2_RU_INR,T2_RU_SINP,T2_TW_Taiwan,T2_RU_ITEP
+CE_black_list=T0,T1,T2_CH_CSCS,T2_FI_HIP,T2_UK_SGrid_RALPP,T2_BE_UCL,T2_HU_Budapest,T2_PL_Warsaw,T2_FR_GRIF_IRFU,T2_BR_SPRACE,T2_PT_LIP_Lisbon,T2_RU_INR,T2_RU_SINP,T2_TW_Taiwan,T2_RU_ITEP
 
 [CRAB]
 use_server=1
